[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.7.1" }
tokio = { version = "~1.34.0", features = ["full"]}
serde = { versiom = "~1.0.193", features = ["derive"]}
serde_json = { version = "~1.0.108" }
once_cell = "~1.18.0" # Single assignment cells and lazy values.
base64 = "~0.21.5" # Encode and decode base64 as bytes or utf8.
http = "~1.0.0" # Types for HTTP requests and responses.
